--- a/package.json
+++ b/package.json
@@ -15,6 +15,24 @@
     "url": "https://www.pereslavtsev.com"
   },
   "version": "0.1.0",
+  "keywords": [
+    "extension",
+    "webextension",
+    "web"
+  ],
+  "scripts": {
+    "build": "cross-env INLINE_RUNTIME_CHUNK=false rescripts build",
+    "clear": "rimraf dist",
+    "dev": "concurrently -n CRA,web-ext \"cross-env BROWSER=none rescripts start\" \"web-ext --config=web-ext-config.dev.js run -t chromium\"",
+    "lint:ext": "web-ext lint",
+    "package": "web-ext build",
+    "postinstall": "patch-package",
+    "start": "web-ext run",
+    "start:android": "yarn start -t firefox-android",
+    "start:chrome": "yarn start -t chromium",
+    "start:firefox": "yarn start -t firefox-desktop",
+    "test": "rescripts test"
+  },
   "dependencies": {
     "@rescripts/cli": "^0.0.14",
     "@rescripts/rescript-env": "^0.0.12",
@@ -31,28 +49,15 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "html-webpack-plugin": "^4.3.0",
+    "patch-package": "^6.2.2",
+    "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "rimraf": "^3.0.2",
     "typescript": "~3.7.2",
     "web-ext": "^4.2.0",
-    "webpack-extension-reloader": "^1.1.4",
     "webpack-manifest-plugin": "^2.2.0"
-  },
-  "scripts": {
-    "build": "cross-env INLINE_RUNTIME_CHUNK=false rescripts build",
-    "dev": "cross-env BROWSER=none rescripts start",
-    "lint:ext": "web-ext lint",
-    "package": "web-ext build",
-    "start": "web-ext run",
-    "start:android": "yarn start -t firefox-android",
-    "start:chrome": "yarn start -t chromium",
-    "start:firefox": "yarn start -t firefox-desktop",
-    "test": "rescripts test"
-  },
-  "keywords": [
-    "webextension",
-    "web"
-  ]
+  }
 }
