--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
   ],
   "scripts": {
     "build": "cross-env INLINE_RUNTIME_CHUNK=false rescripts build",
-    "clear": "rimraf dist",
-    "dev": "concurrently -n CRA,web-ext -c cyan,yellow \"cross-env BROWSER=none rescripts start\" \"web-ext --config=web-ext-config.dev.js run -t chromium\"",
+    "dev": "node scripts/dev",
     "lint:ext": "web-ext lint",
     "package": "web-ext build",
     "postinstall": "patch-package",
@@ -45,10 +44,10 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "concurrently": "^5.2.0",
+    "copy-webpack-plugin": "^6.0.2",
     "cross-env": "^7.0.2",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "html-webpack-plugin": "^4.3.0",
     "patch-package": "^6.2.2",
     "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.0.5",
@@ -56,8 +55,9 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "rimraf": "^3.0.2",
+    "sharp": "^0.25.4",
     "typescript": "~3.7.2",
-    "web-ext": "^4.2.0",
-    "webpack-manifest-plugin": "^2.2.0"
+    "wait-on": "^5.0.1",
+    "web-ext": "^4.2.0"
   }
 }
