--- a/package.json
+++ b/package.json
@@ -14,8 +14,15 @@
     "email": "dev@pereslavtsev.com",
     "url": "https://www.pereslavtsev.com"
   },
-  "version": "0.1.0",
+  "version": "1.0.1",
   "keywords": [
+    "react",
+    "create-react-app",
+    "template",
+    "typescript",
+    "redux",
+    "reduxjs",
+    "react-redux",
     "extension",
     "webextension",
     "web"
@@ -57,10 +64,12 @@
     "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.0.5",
     "react": "^16.13.1",
+    "react-devtools": "^4.7.0",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "rimraf": "^3.0.2",
     "sharp": "^0.25.4",
     "typescript": "~3.7.2",
